components/src/components/dropdown/dropdown.scss
@import '@scania/typography/dist/scss/mixins';
@import '@scania/typography/dist/scss/tokens';
@import './dropdown-core';
@import '../../helpers/components-shared.scss';

:host,
::slotted(*) {
  --sdds-link: var(--sdds-grey-958);
  --sdds-link-text-decoration: none;

  @include type-style('detail-02');

  color: var(--sdds-grey-958);
  box-sizing: border-box;
}

:host {
  position: relative;
  z-index: 10000;
}

.sdds-dropdown {
  position: relative;
  display: flex;
  flex-flow: column wrap;
  width: 100%;
  border: 0;

  &,
  * {
    box-sizing: border-box;
  }

  .sdds-dropdown-toggle {
    @include dropdown-wrapper;
  }

  .sdds-dropdown-arrow {
    color: inherit;
    margin-left: var(--sdds-spacing-element-32);
    transform: rotate(0);
    transition: transform ease 250ms;
  }

  .sdds-dropdown-label {
    flex-grow: 2;
  }

  .sdds-dropdown-filter {
    border: 0;
    outline: none;

    @include type-style('detail-02');

    color: var(--sdds-grey-958);
    width: 100%;
    background: transparent;

    &:focus {
      outline: none;
    }

    &::placeholder {
      color: var(--sdds-grey-700);
    }

    &::-webkit-input-placeholder {
      color: var(--sdds-grey-700);
    }

    &::-moz-placeholder {
      color: var(--sdds-grey-700);
      opacity: 1;
    }

    &::-ms-input-placeholder {
      color: var(--sdds-grey-700);
    }
  }

  .sdds-dropdown-menu {
    @include sdds-scrollbar;

    position: absolute;
    top: 100%;
    left: 0;
    min-width: 100%;
    max-height: 90rem; // max 7 option items, then add scroll
    border-color: transparent;
    border-style: solid;
    border-width: 0 1px 0;
    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
    border-left-color: var(--sdds-grey-100);
    border-right-color: var(--sdds-grey-100);
    overflow-x: hidden;
    overflow-y: auto;
    transform: scaleY(0);
    transform-origin: top;
    transition: transform 250ms ease;
  }

  // Size medium
  &.sdds-dropdown-medium {
    .sdds-dropdown-toggle {
      padding: 4rem;
    }
  }

  // Size small
  &.sdds-dropdown-small {
    .sdds-dropdown-toggle {
      padding: 3rem var(--sdds-spacing-element-16);
    }
  }
}

:host([disabled='true']) {
  cursor: not-allowed;

  .sdds-dropdown {
    .sdds-dropdown-toggle {
      pointer-events: none;
      color: var(--sdds-grey-400);
      border: none;

      .sdds-dropdown-placeholder {
        color: var(--sdds-grey-400);
      }
    }
  }
}

:host(.sdds-dropdown--error) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      border-color: var(--sdds-negative);
    }
  }

  .sdds-dropdown-helper {
    color: var(--sdds-negative);
  }
}

// dropdown option
:host {
  ::slotted(sdds-dropdown-option) {
    display: flex;
    padding: var(--sdds-spacing-element-16);
    background-color: var(--sdds-white);
    border-top: 1px solid transparent;
    border-bottom: 1px solid var(--sdds-grey-100);
    opacity: 0;
    visibility: hidden;
    cursor: pointer;
    box-sizing: border-box;
  }

  ::slotted(sdds-dropdown-option:last-child) {
    border-bottom-color: transparent;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
  }

  ::slotted(sdds-dropdown-option:hover) {
    background-color: var(--sdds-grey-50);
  }

  ::slotted(sdds-dropdown-option:focus) {
    border: 1px solid var(--sdds-blue-400);
    outline: 2px solid var(--sdds-blue-400);
    outline-offset: -2px;
  }

  ::slotted(sdds-dropdown-option.selected),
  ::slotted(sdds-dropdown-option.active),
  ::slotted(sdds-dropdown-option:active) {
    background-color: var(--sdds-grey-300);
    border-top: 1px solid var(--sdds-grey-300);
    border-bottom: 1px solid var(--sdds-grey-300);
  }
}

.sdds-option-label {
  text-decoration: none;
  flex-grow: 2;
}

.sdds-option-checkmark {
  color: inherit;
  opacity: 0;
  transition: opacity 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
  margin-left: var(--sdds-spacing-element-16);
}

:host([size='small']) {
  ::slotted(sdds-dropdown-option) {
    padding: var(--sdds-spacing-element-12) var(--sdds-spacing-element-16);
  }
}

:host(.sdds-dropdown--open) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      box-shadow: 0 -1px 3px -1px rgba(0, 0, 0, 0.1);
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;

      &.is-filter {
        border-bottom: 2px solid var(--sdds-blue-400);
      }
    }

    .sdds-dropdown-arrow {
      transform: rotate(180deg);
    }

    .sdds-dropdown-menu {
      transform: scaleY(1);
    }
  }

  ::slotted(sdds-dropdown-option) {
    visibility: visible;
    opacity: 1;
  }
}

:host([label-position='inside'].sdds-dropdown--selected) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      padding-top: var(--sdds-spacing-element-12);
      padding-bottom: var(--sdds-spacing-element-16);
    }
  }
}

:host([size='medium'][label-position='inside'].sdds-dropdown--selected) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      padding-top: var(--sdds-spacing-element-8);
      padding-bottom: var(--sdds-spacing-element-12);
    }
  }
}

:host([size='small'][label-position='inside'].sdds-dropdown--selected) {
  .sdds-dropdown {
    .sdds-dropdown-toggle {
      padding: var(--sdds-spacing-element-12) var(--sdds-spacing-element-16);
    }

    .sdds-dropdown-label-inside {
      display: none;
    }
  }
}

:host(.selected) {
  .sdds-option-checkmark {
    opacity: 1;
  }
}

.sdds-dropdown-placeholder {
  color: var(--sdds-grey-700);
}

